fixed issue where lap number was showing row id